--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "ownerBot": "523339033991", 
-    "prefix": "$",
+    "prefix": "𝘎𝘖𝘒𝘜𝘊𝘖𝘐𝘕𝘚",
     "uaOverride": "WhatsApp/2.2037.6 Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/85.0.4183.83 Safari/537.36",
     "nao": "𝘎𝘰𝘬𝘶-𝘉𝘰𝘵",
     "vhtear": "𝘎𝘰𝘬𝘶-𝘉𝘰𝘵",
