--- a/config.json
+++ b/config.json
@@ -8,5 +8,6 @@
     "tobz": "𝘎𝘰𝘬𝘶-𝘉𝘰𝘵", 
     "lol": " 𝘎𝘰𝘬𝘶-𝘉𝘰𝘵",
     "authorStick": "𝘎𝘰𝘬𝘶-𝘉𝘰𝘵",
-    "packStick": "BocchiBot"
+    "packStick": "𝘎𝘰𝘬𝘶-𝘉𝘰𝘵"
 }
+
