--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
     "ownerBot": "523339033991", 
     "prefix": "𝘎𝘖𝘒𝘜𝘊𝘖𝘐𝘕𝘚",
     "uaOverride": "WhatsApp/2.2037.6 Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/85.0.4183.83 Safari/537.36",
-    "nao": "𝘎𝘰𝘬𝘶-𝘉𝘰𝘵",
+    "nao": "ccd5d3cc5b42089bd2abf83a121522a85335b912",
     "vhtear": "𝘎𝘰𝘬𝘶-𝘉𝘰𝘵",
     "melodic": "523311858043",
     "tobz": "𝘎𝘰𝘬𝘶-𝘉𝘰𝘵", 
